kustomize/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: online-boutique
  namespace: online-boutique
spec:
  hosts:
  - online-boutique.kubespectra.internal
  gateways:
  - istio-system/istio-ingress-gateway  
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend.online-boutique.svc.cluster.local
        port: 
          number: 80
